<resources>
    <string name="app_name">LISTData Viewer</string>
    <string name="title_activity_maps">Map</string>
    <string name="tile_heading">Choose a basemap (if desired)</string>
    <string name="spinner_heading">Choose a dataset to view</string>
    <string name="category_heading">Choose a category of data to view</string>
    <string name="geology_heading">MRT Web Services Data</string>
    <string name="ok">OK</string>
    <string name="title_location_permission">OK to use location?</string>
    <string name="text_location_permission">In order for the app to use your location, you
        need to grant this permission. You can choose not to, but if so you will need to
        manually position the map.</string>
    <string name="go_button">Go</string>
    <string name="about_button">About</string>
    <string name="action_settings">Settings</string>
    <string name="use_location">Use Location?</string>
    <string name="use_location_heading">Use Device Location?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>

    <string name="addressLookup">Address Lookup</string>
    <string name="addressHint">123 fake street</string>

    <!-- about page stuff -->
    <string name="about_page_description" translatable="false">blah blah</string>

    <string name="contact_us">Contact me</string>
    <string name="instagram">Follow us on Instagram</string>
    <string name="facebook">Like us on Facebook</string>
    <string name="play_store">Rate us on the Play Store</string>
    <string name="twitter">Follow us on Twitter</string>
    <string name="website">Visit our website</string>
    <string name="copy_right">Copyrights © %1$d</string>

    <string name="opacitySlider">Opacity</string>
    <string name="locationSetting">Use Location?</string>

    <string name="about_spiel">This app displays data from The LIST (Land Information System Tasmania),
        see <a href="https://www.thelist.tas.gov.au/app/content/home">here</a>. Specifically, the app
    displays data from the public ArcGIS REST Service which can be found
        <a href="http://services.thelist.tas.gov.au/arcgis/rest/services">here</a>. Data provided via
        The LIST is subject to terms and conditions set out
        <a href="http://listdata.thelist.tas.gov.au/public/LISTWebServicesTermsConditions.pdf">here</a>.
        Note this link leads to a PDF file of the terms and conditions.\n\n

        The app also displays data from the Mineral Resources Tasmania Web Feature Service found
        <a href="http://www.mrt.tas.gov.au/portal/wfs">here</a>.

        LISTData Viewer is not created, supported or endorsed by The LIST, the Department of Primary
        Industries, Parks, Water and Environment, Mineral Resources Tasmania, The Department of State
        Growth or any other part of the State Government - in fact they are probably largely unaware
        of it.\n\n

        It has been developed by ex nihilum as a freely available mobile viewer for publicly
        accessible data from The LIST and other open Tasmanian spatial data sources. Note that The
        LIST data is generally subject to Creative Commons 3 (or attribution) licencing. \n\n

        Queries regarding LISTData Viewer can be directed to the creator via the link below.

        Note: coordinate conversion from latitude/longitude to UTM should be accurate to within about
        1m.
    </string>
    <!-- end about -->

</resources>
