<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/description"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/about_spiel"
                android:textAppearance="@style/TextAppearance.AppCompat"/>

        </LinearLayout>

        <View style="@style/about_separator" />

        <LinearLayout
            android:id="@+id/email_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:padding="8dp"
                app:srcCompat="@drawable/about_icon_email"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:textAlignment="gravity"
                android:text="@string/contact_us"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        </LinearLayout>

        <View style="@style/about_separator" />

        <LinearLayout
            android:id="@+id/website_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:padding="8dp"
                app:srcCompat="@drawable/about_icon_link"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:textAlignment="gravity"
                android:text="@string/website"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        </LinearLayout>

        <View style="@style/about_separator" />

    </LinearLayout>
</ScrollView>